scss/layout/_preloader.scss
// imports
@use '../abstracts/base';
@use "../abstracts/mixins" as mix;
@use "../abstracts/variables" as var;

// preloader
.preloader {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: var.color(black);
  display: grid;
  place-items: center;
  visibility: visible;
  z-index: 2000;
  transition: 0.5s ease-in-out;
  opacity: 1;

  &__content {
    position: absolute;
    display: grid;
    place-items: center;

    h2 {
      @include mix.headingStyles;
      font-size: var.size(xxl);
      color: var.color(blue);
      z-index: 2000;
      pointer-events: none;
    }

    .preloader__img {
      width: 15rem;
      pointer-events: none;
    }
  }

  .spinner {
    width: 300px;
    height: 300px;
    position: relative;

    div {
      box-sizing: border-box;
      position: absolute;
      width: 100%;
      height: 100%;
      border: 10px double transparent;
      border-top-color: var.color(blue);
      border-radius: 50%;
      animation: spinnerOne 1.5s linear infinite;

      &:nth-child(2) {
        border: 10px double transparent;
        border-bottom-color: var.color(blue);
        animation: spinnerTwo 1.5s linear infinite;
      }
    }
  }

  @keyframes spinnerOne {
    0% {
      transform: rotate(0deg);
      border-width: 10px;
    }

    50% {
      transform: rotate(180deg);
      border-width: 1px;
    }

    100% {
      transform: rotate(360deg);
      border-width: 10px;
    }
  }

  @keyframes spinnerTwo {
    0% {
      transform: rotate(0deg);
      border-width: 1px;
    }

    50% {
      transform: rotate(180deg);
      border-width: 10px;
    }

    100% {
      transform: rotate(360deg);
      border-width: 1px;
    }
  }
}

.hide-preloader {
  z-index: -1000;
  visibility: hidden;
  opacity: 0;
}

